tests/zrun/bad/0.zls
let node main() returns ()
  local x
  do () = 1+() and x = 42 done  
